--- a/_includes/key-dates.html
+++ b/_includes/key-dates.html
@@ -2,7 +2,7 @@
 
 <ul class="spaced-list">
     <li>Paper & Demo Submissions: <strong>January 3, 2022 AoE</strong></li>
-    <li>Acceptance Notifications: <strong>February 9, 2022</strong></li>
-    <li>Camera-Ready Submissions: <strong>TBD</strong></li>
+    <li>Acceptance Notifications: <strong>January 28, 2022</strong></li>
+    <li>Camera-Ready Submissions: <strong>February 11, 2022</strong></li>
     <li>Workshop Date: <strong>March 22, 2022</strong></li>
 </div>
